<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <SwitchPreferenceCompat
        android:iconSpaceReserved="false"
        android:key="enable_night_theme"
        android:summary="@string/night_theme_summary"
        android:title="@string/night_theme"
        app:iconSpaceReserved="false"
        tools:ignore="UnusedAttribute" />

    <DropDownPreference
        android:defaultValue="en"
        android:entries="@array/languages"
        android:entryValues="@array/language_values"
        android:iconSpaceReserved="false"
        android:key="language"
        android:title="@string/app_language"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true"
        tools:ignore="UnusedAttribute" />

    <DropDownPreference
        android:defaultValue="normal"
        android:entries="@array/font_size"
        android:entryValues="@array/font_size_values"
        android:iconSpaceReserved="false"
        android:key="font_size"
        android:title="@string/font_size"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true"
        tools:ignore="UnusedAttribute" />

    <Preference
        android:iconSpaceReserved="false"
        android:key="clear_data"
        android:summary="@string/clear_data_summary"
        android:title="@string/clear_data"
        app:iconSpaceReserved="false"
        tools:ignore="UnusedAttribute" />

</PreferenceScreen>